# metassr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  README.md  TODO.md  flake.nix  rust-toolchain.toml
.github/workflows/: benchmark.yml  clippy.yml  docker.yml  flake.yml  integration.yml  lint.yml  main.yml  release.yml  test.yml
benchmarks/: README.md  benchmark.py
benchmarks/metassr/: Dockerfile
crates/html-generator/src/: html_props.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/metassr-api-handler/: Cargo.toml
crates/metassr-api-handler/src/: lib.rs
crates/metassr-build/: Cargo.toml
crates/metassr-build/src/: utils.rs
crates/metassr-build/src/client/: hydrator.rs  mod.rs
crates/metassr-build/src/server/: manifest.rs  mod.rs  pages_generator.rs  render.rs  render_exec.rs  targets.rs
crates/metassr-build/src/server/renderer/: head.rs  html.rs  page.rs
crates/metassr-bundler/: Cargo.toml
crates/metassr-bundler/src/: bundle.js  lib.rs  vendor.rs
crates/metassr-bundler/tests/: package.json
crates/metassr-create/: Cargo.toml  build.rs
crates/metassr-create/src/: templates.rs
crates/metassr-create/templates/javascript/: package.json
crates/metassr-create/templates/typescript/: package.json
crates/metassr-fs-analyzer/: Cargo.toml
crates/metassr-fs-analyzer/src/: dist_dir.rs  src_dir.rs
crates/metassr-html/: Cargo.toml
crates/metassr-html/src/: builder.rs  html_props.rs
crates/metassr-server/: Cargo.toml  build.rs
crates/metassr-server/src/: handler.rs  lib.rs  live_reload.rs  rebuilder.rs
crates/metassr-server/src/layers/: tracing.rs
crates/metassr-server/src/scripts/: live-reload.js
crates/metassr-utils/: Cargo.toml
crates/metassr-utils/src/: cache_dir.rs  js_path.rs  lib.rs  rand.rs
crates/metassr-watcher/: Cargo.toml
crates/metassr-watcher/src/: lib.rs  utils.rs
metassr-cli/: Cargo.toml
metassr-cli/src/: main.rs
metassr-cli/src/cli/: builder.rs  creator.rs  dev.rs  mod.rs  runner.rs
tests/: .gitignore
tests/web-app/: package-lock.json  package.json
tests/web-app/src/api/: hello.js
tests/web-app/tests/: bundle.sh  playwright-test.js  ssg.sh  ssr.sh
