[package]
name = "metassr-api-handler"
version = "1.0.0-alpha"
edition = "2021"
description = "API routes handler for MetaSSR with polyglot support"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
metacall = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
metacall-sys = "0.1.5"

[dev-dependencies]
tempfile = "3"
