[package]
name = "metassr-build"
version.workspace = true
edition = "2021"
description = "Web builder & client bundler (built on Rspack), built for MetaSSR."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metacall = "0.5.6"
anyhow = "1.0.82"
serde_json = "1.0.120"
metassr-utils = { path = "../metassr-utils" }
metassr-html = { path = "../metassr-html" }
lazy_static = "1.5.0"
serde = { version = "1.0.207", features = ["derive"] }
metassr-bundler = { path = "../metassr-bundler" }
metassr-fs-analyzer = { path = "../metassr-fs-analyzer" }


[build-dependencies]
metacall-sys = "0.1.4"

[dev-dependencies]
tempfile = "3"
