[package]
name = "metassr-bundler"
version.workspace = true
edition = "2021"
description = "A simple crate is used for web bundling built on Metacall and Rspack."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.128"
tokio = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread"] }
rspack = { git = "https://github.com/web-infra-dev/rspack/", tag = "v2.0.0-beta.5", default-features = true, features = ["loader_swc"]}

rspack_core = { git = "https://github.com/web-infra-dev/rspack", tag = "v2.0.0-beta.5", package = "rspack_core" }
rspack_paths = { git = "https://github.com/web-infra-dev/rspack", tag = "v2.0.0-beta.5", package = "rspack_paths" }
rspack_regex = { git = "https://github.com/web-infra-dev/rspack", tag = "v2.0.0-beta.5", package = "rspack_regex" }
rspack_fs = { git = "https://github.com/web-infra-dev/rspack", tag = "v2.0.0-beta.5", package = "rspack_fs" }
