[package]
name = "metassr-bundler"
version.workspace = true
edition = "2021"
description = "A simple crate is used for web bundling built on Metacall and Rspack."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.128"
metacall = "0.5.6"
tokio = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread"] }
rspack = { version = "0.7.10", default-features = true, features = ["loader_swc"] }
rspack_core = "0.7.10"
rspack_paths = "0.7.10"
rspack_regex = "0.7.10"
rspack_fs = "0.7.10"
dunce = "1.0"

[build-dependencies]
metacall-sys = "0.1.4"
