[package]
name = "metassr-bundler"
version.workspace = true
edition = "2021"
description = "A simple crate is used for web bundling built on Metacall and esbuild."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
lazy_static = "1.5.0"
metacall = "0.5.8"
metassr-utils = { path = "../metassr-utils" }
serde_json = "1.0.128"
tracing = "0.1.40"


[build-dependencies]
metacall-sys = "0.1.5"
