[package]
name = "metassr-server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
chrono = "0.4.38"
metacall = "0.4.1"
metassr-build = { path = "../metassr-build" }
metassr-fs-analyzer = { path = "../metassr-fs-analyzer" }
metassr-utils = { path = "../metassr-utils" }
metassr-watcher = { path = "../metassr-watcher" }
serde_json = "1.0.122"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
serde = "1.0.218"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"
notify = { version = "8.0.0", features = ["serde"] }
notify-debouncer-full = "0.6.0"
walkdir = "2"